array.island.Island.scala.error
Erreur de compilation :
Island:8: error: type mismatch;
 found   : Unit
 required: Int
  if (num.length==0){return 0}
  ^