array.island.Island.scala.code




def island(num:Array[Int]): Int = {
	
  if (num.length==0){return 0}
  
 
  
}